<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.policetracker.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page_nav"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="test"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dispatch"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/dispatch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/police"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/dispatch"
        android:text="@string/police"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/ambulance"
        android:layout_marginTop="10dp"
        android:layout_below="@id/police"
        android:text="@string/ambulance"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/firemen"
        android:layout_marginTop="10dp"
        android:layout_below="@id/ambulance"
        android:text="@string/firemen"/>
</RelativeLayout>
